--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-08T02:50:03Z</date>
+						<date>2019-04-08T13:18:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -544,11 +544,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DBTIM+zYaRDH
-								JTyBUBmaKw==
+								dAukvRUOgL5Y
+								YEz1BJx1rA==
 								</data>
 								<key>Size</key>
-								<integer>977636</integer>
+								<integer>977649</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
