swap talks netsci
swap talks netsci

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-08T13:18:47Z</date>
+						<date>2019-04-08T13:57:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -524,8 +524,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uWOitvHkqAz6
-								a25vfZRySQ==
+								o/7jza0Cpa9i
+								tnC13jvXEg==
 								</data>
 								<key>Size</key>
 								<integer>599390</integer>
@@ -534,8 +534,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pzN8ZjM9XwZM
-								hYPLTrQoFA==
+								EOKXyCi3hSs8
+								HEcTXtcI4w==
 								</data>
 								<key>Size</key>
 								<integer>78623</integer>
@@ -544,11 +544,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dAukvRUOgL5Y
-								YEz1BJx1rA==
+								cvAUqTvmiTRR
+								uV9EFIDAMg==
 								</data>
 								<key>Size</key>
-								<integer>977649</integer>
+								<integer>977673</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
