lau schedule edits
lau schedule edits

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-08T13:57:34Z</date>
+						<date>2019-04-08T14:28:35Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -544,11 +544,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cvAUqTvmiTRR
-								uV9EFIDAMg==
+								Q4ArI/27YIno
+								35qONzMXiA==
 								</data>
 								<key>Size</key>
-								<integer>977673</integer>
+								<integer>977592</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
