satellite room assignments
satellite room assignments

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -3860,7 +3860,7 @@
 					<key>page37 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:45Z</date>
+						<date>2019-04-09T14:03:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3885,46 +3885,6 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
-							<key>files/stacks-image-012ccd0-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								XsvJYylntJyu
-								SBVPvLHXuw==
-								</data>
-								<key>Size</key>
-								<integer>38805</integer>
-							</dict>
-							<key>files/stacks-image-1500267-332x498.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/1yJEGVtgDYC
-								qJpjqOOqSg==
-								</data>
-								<key>Size</key>
-								<integer>37050</integer>
-							</dict>
-							<key>files/stacks-image-1500267-332x498@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								5HaFH1+IeZ2q
-								+imybGmwWQ==
-								</data>
-								<key>Size</key>
-								<integer>61496</integer>
-							</dict>
-							<key>files/stacks-image-3179185-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								F9b2GlY9B0E6
-								KtfJt7YGVg==
-								</data>
-								<key>Size</key>
-								<integer>28413</integer>
-							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -3934,46 +3894,6 @@
 								</data>
 								<key>Size</key>
 								<integer>13322</integer>
-							</dict>
-							<key>files/stacks-image-78f98c2-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								VQeylHByJYMt
-								eHl8ZH4K0Q==
-								</data>
-								<key>Size</key>
-								<integer>40200</integer>
-							</dict>
-							<key>files/stacks-image-78f98c2-350x375@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ayixwrm11vSB
-								j4hesfTjNw==
-								</data>
-								<key>Size</key>
-								<integer>66232</integer>
-							</dict>
-							<key>files/stacks-image-7bc5484-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								SOlRP1yO0rWu
-								gZ/HtPG+rw==
-								</data>
-								<key>Size</key>
-								<integer>36199</integer>
-							</dict>
-							<key>files/stacks-image-7bc5484-350x375@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								TL7yNXylaDtA
-								Ftz2qb0T9g==
-								</data>
-								<key>Size</key>
-								<integer>61533</integer>
 							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
@@ -3985,55 +3905,35 @@
 								<key>Size</key>
 								<integer>21714</integer>
 							</dict>
-							<key>files/stacks-image-e5e8064-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								4+MD2lluE/v8
-								P3P4cYsfGg==
-								</data>
-								<key>Size</key>
-								<integer>30647</integer>
-							</dict>
-							<key>files/stacks-image-e5e8064-350x375@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								JyszyP6C4FQg
-								UIxslUmduw==
-								</data>
-								<key>Size</key>
-								<integer>48100</integer>
-							</dict>
 							<key>files/stacks_page_page37.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								W/kX8dpf8rJB
-								k2R4vYLV3A==
+								oABrWxmAGyNZ
+								rcmOc9/0TA==
 								</data>
 								<key>Size</key>
-								<integer>133972</integer>
+								<integer>192614</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8GOYQtRVxhXr
-								Y6LZOhFiGg==
+								gmaAuBE1nYTT
+								ZP9VeBcMIA==
 								</data>
 								<key>Size</key>
-								<integer>26207</integer>
+								<integer>24751</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								K0CTUD/6jTjX
-								umjelsjeWA==
+								b54rhUrUtwzl
+								hJr6tE+K1A==
 								</data>
 								<key>Size</key>
-								<integer>73800</integer>
+								<integer>96373</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7806,7 +7706,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-08T14:28:35Z</date>
+						<date>2019-04-09T14:03:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8295,8 +8195,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								o/7jza0Cpa9i
-								tnC13jvXEg==
+								ph5U5j7VPu/F
+								OkdaVkYxjg==
 								</data>
 								<key>Size</key>
 								<integer>599390</integer>
@@ -8315,11 +8215,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Q4ArI/27YIno
-								35qONzMXiA==
+								iT/Eqpj4/ZXd
+								5+nQx3PpIw==
 								</data>
 								<key>Size</key>
-								<integer>977592</integer>
+								<integer>977809</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14036,7 +13936,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-08T14:28:35Z</date>
+						<date>2019-04-09T14:03:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15075,11 +14975,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z4ZtXNfaTmRC
-								3Y0zDoGvDg==
+								E5VhK9Zksu6W
+								rLfJVtPaUA==
 								</data>
 								<key>Size</key>
-								<integer>3748</integer>
+								<integer>3785</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15223,7 +15123,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEtyQsKg9OADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEubta0WB2ADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15233,14 +15133,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwS3JCwqE
-				WoAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwS5u1rRY
+				vIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBLckLCoSE
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBLm7WtFjm
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -15250,7 +15150,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBLckLCoSdgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBLm7WtFkQgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -15260,7 +15160,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBLckLCoS2gAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBLm7WtFkpgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
