--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-08T14:28:35Z</date>
+						<date>2019-04-09T14:03:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -524,8 +524,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								o/7jza0Cpa9i
-								tnC13jvXEg==
+								ph5U5j7VPu/F
+								OkdaVkYxjg==
 								</data>
 								<key>Size</key>
 								<integer>599390</integer>
@@ -544,11 +544,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Q4ArI/27YIno
-								35qONzMXiA==
+								iT/Eqpj4/ZXd
+								5+nQx3PpIw==
 								</data>
 								<key>Size</key>
-								<integer>977592</integer>
+								<integer>977809</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
