--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:45Z</date>
+						<date>2019-04-09T14:03:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -60,46 +60,6 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
-							<key>files/stacks-image-012ccd0-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								XsvJYylntJyu
-								SBVPvLHXuw==
-								</data>
-								<key>Size</key>
-								<integer>38805</integer>
-							</dict>
-							<key>files/stacks-image-1500267-332x498.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/1yJEGVtgDYC
-								qJpjqOOqSg==
-								</data>
-								<key>Size</key>
-								<integer>37050</integer>
-							</dict>
-							<key>files/stacks-image-1500267-332x498@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								5HaFH1+IeZ2q
-								+imybGmwWQ==
-								</data>
-								<key>Size</key>
-								<integer>61496</integer>
-							</dict>
-							<key>files/stacks-image-3179185-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								F9b2GlY9B0E6
-								KtfJt7YGVg==
-								</data>
-								<key>Size</key>
-								<integer>28413</integer>
-							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -109,46 +69,6 @@
 								</data>
 								<key>Size</key>
 								<integer>13322</integer>
-							</dict>
-							<key>files/stacks-image-78f98c2-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								VQeylHByJYMt
-								eHl8ZH4K0Q==
-								</data>
-								<key>Size</key>
-								<integer>40200</integer>
-							</dict>
-							<key>files/stacks-image-78f98c2-350x375@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ayixwrm11vSB
-								j4hesfTjNw==
-								</data>
-								<key>Size</key>
-								<integer>66232</integer>
-							</dict>
-							<key>files/stacks-image-7bc5484-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								SOlRP1yO0rWu
-								gZ/HtPG+rw==
-								</data>
-								<key>Size</key>
-								<integer>36199</integer>
-							</dict>
-							<key>files/stacks-image-7bc5484-350x375@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								TL7yNXylaDtA
-								Ftz2qb0T9g==
-								</data>
-								<key>Size</key>
-								<integer>61533</integer>
 							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
@@ -160,55 +80,35 @@
 								<key>Size</key>
 								<integer>21714</integer>
 							</dict>
-							<key>files/stacks-image-e5e8064-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								4+MD2lluE/v8
-								P3P4cYsfGg==
-								</data>
-								<key>Size</key>
-								<integer>30647</integer>
-							</dict>
-							<key>files/stacks-image-e5e8064-350x375@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								JyszyP6C4FQg
-								UIxslUmduw==
-								</data>
-								<key>Size</key>
-								<integer>48100</integer>
-							</dict>
 							<key>files/stacks_page_page37.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								W/kX8dpf8rJB
-								k2R4vYLV3A==
+								oABrWxmAGyNZ
+								rcmOc9/0TA==
 								</data>
 								<key>Size</key>
-								<integer>133972</integer>
+								<integer>192614</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8GOYQtRVxhXr
-								Y6LZOhFiGg==
+								gmaAuBE1nYTT
+								ZP9VeBcMIA==
 								</data>
 								<key>Size</key>
-								<integer>26207</integer>
+								<integer>24751</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								K0CTUD/6jTjX
-								umjelsjeWA==
+								b54rhUrUtwzl
+								hJr6tE+K1A==
 								</data>
 								<key>Size</key>
-								<integer>73800</integer>
+								<integer>96373</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
