--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -13,6 +13,8 @@
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
+	<key>selectedInspectorTab</key>
+	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
 		<string>page55</string>
