pub crawl update
pub crawl update

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-09T14:03:23Z</date>
+						<date>2019-04-09T15:32:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -524,31 +524,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ph5U5j7VPu/F
-								OkdaVkYxjg==
+								6HjVCslb43f2
+								yfrPrF5Uig==
 								</data>
 								<key>Size</key>
-								<integer>599390</integer>
+								<integer>555584</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								EOKXyCi3hSs8
-								HEcTXtcI4w==
+								nQl8uOtlwgaF
+								P7VeCcEIKQ==
 								</data>
 								<key>Size</key>
-								<integer>78623</integer>
+								<integer>76803</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								iT/Eqpj4/ZXd
-								5+nQx3PpIw==
+								hzWfV9KCXbLo
+								e0c38/3pMw==
 								</data>
 								<key>Size</key>
-								<integer>977809</integer>
+								<integer>939640</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
