--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/16-Summer-REU/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/16-Summer-REU/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T18:02:59Z</date>
+						<date>2019-04-09T17:22:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -214,11 +214,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								g4XJ2RD0SLVY
-								6rvuGS8x/Q==
+								a0pnR2aWl3d3
+								V9jysqnBDw==
 								</data>
 								<key>Size</key>
-								<integer>71306</integer>
+								<integer>71299</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
