--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -8,14 +8,14 @@
 		<string>page53</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
 	<key>selectedItems</key>
 	<array>
-		<string>page55</string>
+		<string>page84</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
