--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-19T20:45:53Z</date>
+						<date>2019-04-12T14:53:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -264,11 +264,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RJs+7xYbqwX6
-								3lfOiaPpSw==
+								Mo/6x3Q0Ht29
+								ORaQOXtkEg==
 								</data>
 								<key>Size</key>
-								<integer>131522</integer>
+								<integer>131659</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
