update lightning talks NetSci
update lightning talks NetSci

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-12T15:00:47Z</date>
+						<date>2019-04-12T15:05:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -544,11 +544,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								p1tN2k01b72o
-								DqQTOa87XA==
+								ZrUUzzNBDxbN
+								c2Or0NX47A==
 								</data>
 								<key>Size</key>
-								<integer>939566</integer>
+								<integer>939586</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
