--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -1908,7 +1908,7 @@
 					<key>page22 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T13:33:40Z</date>
+						<date>2019-04-15T13:44:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2047,11 +2047,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								etrILrSP2qwh
-								zL5P6HrWqw==
+								r+SukFW6JQZz
+								IOdZJu67xA==
 								</data>
 								<key>Size</key>
-								<integer>65912</integer>
+								<integer>65945</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14544,7 +14544,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T13:33:40Z</date>
+						<date>2019-04-15T13:44:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14573,11 +14573,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+PDtzI7cXZ+4
-								jtunpQBMpA==
+								G8TZ1gvMsGwc
+								C9bDS/8P+A==
 								</data>
 								<key>Size</key>
-								<integer>7175</integer>
+								<integer>5447</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14656,7 +14656,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T13:29:32Z</date>
+						<date>2019-04-15T13:44:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15695,11 +15695,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/+fn26j/uUOx
-								GeOjx7y0pg==
+								4I1Zn/C8QEb6
+								FJqHdWw2Qw==
 								</data>
 								<key>Size</key>
-								<integer>4599</integer>
+								<integer>3748</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15843,7 +15843,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEyX9tagcOADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEyYSNeKY2ADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15853,14 +15853,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwTJf21qC
-				WoAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwTJhI14q
+				E4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBMl/bWoKM
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBMmEjXio9
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -15870,7 +15870,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBMl/bWoK2gAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBMmEjXipWgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -15880,7 +15880,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBMl/bWoMjgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBMmEjXipvgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
