--- a/vermontcomplexsystems-foundation.rw8/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/1-Research-groups/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/1-Research-groups/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T13:33:40Z</date>
+						<date>2019-04-15T13:44:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -172,11 +172,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								etrILrSP2qwh
-								zL5P6HrWqw==
+								r+SukFW6JQZz
+								IOdZJu67xA==
 								</data>
 								<key>Size</key>
-								<integer>65912</integer>
+								<integer>65945</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
