--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T13:29:32Z</date>
+						<date>2019-04-15T13:52:57Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -554,11 +554,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SGeDDChew8I6
-								jupyjmESmA==
+								SVdbDiqApcZo
+								nrJWW+obzg==
 								</data>
 								<key>Size</key>
-								<integer>943100</integer>
+								<integer>942990</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
