--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -8106,7 +8106,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T13:52:57Z</date>
+						<date>2019-04-15T14:11:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8155,21 +8155,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5SEHlmzIRPnE
-								h1Zlyu2W+A==
+								TPGeujKpTzHL
+								QR5lGhvUSw==
 								</data>
 								<key>Size</key>
-								<integer>35205</integer>
+								<integer>35739</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZP2FJ/yve/bb
-								UMUDEFQ7OA==
+								v9Af7SEGojgo
+								zGOufpUslA==
 								</data>
 								<key>Size</key>
-								<integer>68310</integer>
+								<integer>69192</integer>
 							</dict>
 							<key>files/stacks-image-0c90353-700x375.jpg</key>
 							<dict>
@@ -8345,11 +8345,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AQQpX6Vwp+W4
-								iqILFHYS5g==
+								J0oCqNLQIZun
+								8nxN/0xT1A==
 								</data>
 								<key>Size</key>
-								<integer>27501</integer>
+								<integer>28375</integer>
 							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
@@ -8405,11 +8405,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AQQpX6Vwp+W4
-								iqILFHYS5g==
+								J0oCqNLQIZun
+								8nxN/0xT1A==
 								</data>
 								<key>Size</key>
-								<integer>27501</integer>
+								<integer>28375</integer>
 							</dict>
 							<key>files/stacks-image-843a067.jpg</key>
 							<dict>
@@ -8605,31 +8605,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2ACaVu9JFDXb
-								uj2SrCnB/Q==
+								Be1AtaI37FzH
+								WKBB4RC4vg==
 								</data>
 								<key>Size</key>
-								<integer>558534</integer>
+								<integer>555477</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								JoXEyyHD2vKL
-								vTicdA243Q==
+								vn03dzs8+7bP
+								b/T0802nkA==
 								</data>
 								<key>Size</key>
-								<integer>76985</integer>
+								<integer>76803</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								SVdbDiqApcZo
-								nrJWW+obzg==
+								+HlpdCjDJ+2m
+								wWqiJ9WNwQ==
 								</data>
 								<key>Size</key>
-								<integer>942990</integer>
+								<integer>939395</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14544,7 +14544,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T13:44:37Z</date>
+						<date>2019-04-15T14:11:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14573,11 +14573,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								G8TZ1gvMsGwc
-								C9bDS/8P+A==
+								Y/o2s+WkFmME
+								zY5Ykb4sUA==
 								</data>
 								<key>Size</key>
-								<integer>5447</integer>
+								<integer>5479</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14656,7 +14656,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T13:52:57Z</date>
+						<date>2019-04-15T14:11:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15695,11 +15695,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MEIwlbsPZV0f
-								4eKy7jDfRQ==
+								vKqRgYX/beLb
+								1vKEsAzsIg==
 								</data>
 								<key>Size</key>
-								<integer>3748</integer>
+								<integer>4599</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15843,7 +15843,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEyYh3yZjyADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEyZDyZW9WADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15853,14 +15853,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwTJiHfJn
-				QYAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwTJkPJlc
+				U4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBMmId8mdz
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBMmQ8mVx0
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -15870,7 +15870,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBMmId8meUgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBMmQ8mVyWgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -15880,7 +15880,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBMmId8me2gAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBMmQ8mVyvgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
