dinner speaker schedule
dinner speaker schedule

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T14:11:03Z</date>
+						<date>2019-04-15T18:06:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -534,11 +534,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Be1AtaI37FzH
-								WKBB4RC4vg==
+								Po+Jp2ODAw9O
+								M7bXVYTaKg==
 								</data>
 								<key>Size</key>
-								<integer>555477</integer>
+								<integer>555584</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -554,11 +554,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+HlpdCjDJ+2m
-								wWqiJ9WNwQ==
+								goYvdizXaNeW
+								okYZIgg3KQ==
 								</data>
 								<key>Size</key>
-								<integer>939395</integer>
+								<integer>939837</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
