Poster submission 369 not attending
Poster submission 369 not attending

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-15T18:06:47Z</date>
+						<date>2019-04-15T19:02:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -554,11 +554,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								goYvdizXaNeW
-								okYZIgg3KQ==
+								QqEe3K7R4eAt
+								+0DxiS4ZcQ==
 								</data>
 								<key>Size</key>
-								<integer>939837</integer>
+								<integer>939706</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
